--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <a href="/">Página Inicial</a>
       </li>
       <li class="s-menu__item">
-        <a href="#">Tobey Maguire</a>
+        <a href="#" onclick="selectCarouselItemMenu(1)">Tobey Maguire</a>
       </li>
       <li class="s-menu__item s-menu__icon">
         <img src="./assets/images/icons/spider.svg" alt="Spider-Man Multiverse">
       </li>
       <li class="s-menu__item">
-        <a href="#">Tom Holland</a>
+        <a href="#" onclick="selectCarouselItemMenu(2)">Tom Holland</a>
       </li>
       <li class="s-menu__item">
-        <a href="#">Andrew Garfield</a>
+        <a href="#" onclick="selectCarouselItemMenu(3)">Andrew Garfield</a>
       </li>
     </ul>
   </nav>
@@ -44,6 +44,11 @@
         <img class="s-card__image" src="./assets/images/spider-man-03.png" alt="Andrew Garfield">
         <h2 class="s-card__title">Andrew Garfield</h2>
       </a>
+      <!-- <a href="./pages/andrew-garfield/spiderman1.html" class="s-card" id="spider-man-04">
+        <img class="s-card__background" src="./assets/images/pic-sm-bg-03.jpg">
+        <img class="s-card__image" src="./assets/images/spider-man-03.png" alt="TESTE Garfield">
+        <h2 class="s-card__title">TESTE Garfield</h2>
+      </a> -->
     </div>
   </div>
 
@@ -57,6 +62,9 @@
     <div id="3" onclick="selectCarouselItem(this)" class="s-controller__button">
       03
     </div>
+    <!-- <div id="4" onclick="selectCarouselItem(this)" class="s-controller__button">
+      04
+    </div> -->
     <div class="s-controller__line"></div>
   </div>
 </body>
